--- a/UWP-Desktop/BaseInfoPage.xaml
+++ b/UWP-Desktop/BaseInfoPage.xaml
@@ -1,5 +1,5 @@
 ﻿<Page
-    x:Class="UWP_Desktop.MainPage"
+    x:Class="UWP_Desktop.BaseInfoPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:UWP_Desktop"
@@ -26,7 +26,7 @@
             <RowDefinition Height="*"></RowDefinition>
         </Grid.RowDefinitions>
 
-        <TextBlock Grid.Column="0" Grid.Row="0"  Margin="10" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="24" >
+        <TextBlock Grid.Column="0" Grid.Row="0"  Margin="10" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="20" >
             ID番号
         </TextBlock>
 
@@ -34,7 +34,7 @@
             
         </TextBox>
 
-        <TextBlock Grid.Column="0" Grid.Row="1"  Margin="10" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="24" >
+        <TextBlock Grid.Column="0" Grid.Row="1"  Margin="10" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="20" >
             氏名
         </TextBlock>
 
@@ -42,7 +42,7 @@
 
         </TextBox>
 
-        <TextBlock Grid.Column="0" Grid.Row="2"  Margin="10" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="24" >
+        <TextBlock Grid.Column="0" Grid.Row="2"  Margin="10" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="20" >
             生年月日
         </TextBlock>
 
@@ -50,7 +50,7 @@
             
         </DatePicker>
 
-        <TextBlock Grid.Column="0" Grid.Row="3"  Margin="10" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="24" >
+        <TextBlock Grid.Column="0" Grid.Row="3"  Margin="10" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="20" >
             性別
         </TextBlock>
 
@@ -59,7 +59,7 @@
             <RadioButton x:Name="Option2RadioButton" Content="女" />
         </StackPanel>
 
-        <TextBlock Grid.Column="0" Grid.Row="4"  Margin="10" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="24" >
+        <TextBlock Grid.Column="0" Grid.Row="4"  Margin="10" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="20" >
             戸籍
         </TextBlock>
 
@@ -79,7 +79,7 @@
 
 
 
-        <TextBlock Grid.Column="0" Grid.Row="5"  Margin="10" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="24" FontFamily="Segoe UI" >
+        <TextBlock Grid.Column="0" Grid.Row="5"  Margin="10" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="20" FontFamily="Segoe UI" >
             学歴
         </TextBlock>
 
@@ -92,7 +92,7 @@
             <RadioButton x:Name="N6" Content="その他" />
         </StackPanel>
 
-        <TextBlock Grid.Column="0" Grid.Row="6"  Margin="10" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="24" >
+        <TextBlock Grid.Column="0" Grid.Row="6"  Margin="10" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="20" >
             家族構成
         </TextBlock>
 
@@ -104,7 +104,7 @@
             <RadioButton  Content="その他" />
         </StackPanel>
 
-        <TextBlock Grid.Column="0" Grid.Row="7"  Margin="10" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="24" >
+        <TextBlock Grid.Column="0" Grid.Row="7"  Margin="10" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="20" >
             書類送付先
         </TextBlock>
 
@@ -113,7 +113,7 @@
             <RadioButton  Content="勤め先" />
         </StackPanel>
 
-        <TextBlock Grid.Column="0" Grid.Row="8"  Margin="10" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="24" >
+        <TextBlock Grid.Column="0" Grid.Row="8"  Margin="10" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="20" >
             SMS送付可否
         </TextBlock>
 
@@ -122,7 +122,7 @@
             <RadioButton  Content="不可" />
         </StackPanel>
 
-        <TextBlock Grid.Column="0" Grid.Row="9"  Margin="10" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="24" >
+        <TextBlock Grid.Column="0" Grid.Row="9"  Margin="10" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="20" >
             個人E-Mail
         </TextBlock>
         <TextBox Grid.Column="1" Grid.Row="9" Margin="10">
