--- a/UWP-Desktop/StartupPage.xaml
+++ b/UWP-Desktop/StartupPage.xaml
@@ -9,15 +9,15 @@
 
     <Page.Resources>
         <Style TargetType="Button" x:Key="NavigationButtonStyle">
-            <Setter Property="Background" Value="Aqua" />
+            <Setter Property="Background" Value="Black" />
             <Setter Property="HorizontalAlignment" Value="Stretch" />
             <Setter Property="VerticalAlignment" Value="Stretch" />
             <Setter Property="BorderBrush" Value="Gray" />
             <Setter Property="BorderThickness" Value="0,0,2,0" />
         </Style>
         <Style TargetType="Image" x:Key="IconImageStyle">
-            <Setter Property="Height" Value="20" />
-            <Setter Property="Width" Value="20" />
+            <Setter Property="Height" Value="80" />
+            <!--<Setter Property="Width" Value="60" />-->
             <Setter Property="Margin" Value="0,0,10,0" />
         </Style>
     </Page.Resources>
@@ -26,6 +26,7 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="100" />
             <RowDefinition Height="*" />
+            <RowDefinition Height="100" />
         </Grid.RowDefinitions>
         
         <Grid>
@@ -36,30 +37,45 @@
             </Grid.ColumnDefinitions>
             <Button Name="BaseInfo"
                     Grid.Column="0" 
-                    Content="基本情報"
                     Click="BaseInfo_Click"
                     Style="{StaticResource NavigationButtonStyle}">
+                <StackPanel Orientation="Horizontal"  >
+                    <Image Source="Assets/basic.png" Style="{StaticResource IconImageStyle}" />
+                    <TextBlock Text="基本情報" Foreground="White" VerticalAlignment="Center" />
+                </StackPanel>
             </Button>
             <Button Name="EmpInfo"
                     Grid.Column="1"  
-                    Content="勤務先情報"
                     Click="EmpInfo_Click"
                     Style="{StaticResource NavigationButtonStyle}">
+                <StackPanel Orientation="Horizontal"  >
+                    <Image Source="Assets/office.jpg" Style="{StaticResource IconImageStyle}" />
+                    <TextBlock Text="勤務先情報" Foreground="White" VerticalAlignment="Center" />
+                </StackPanel>
             </Button>
             <Button Name="HomeInfo"
                     Grid.Column="2"  
-                    Content="自宅情報"
                     Click="HomeInfo_Click"
-                    Style="{StaticResource NavigationButtonStyle}">
+                    Style="{StaticResource NavigationButtonStyle}" FontFamily="Segoe UI">
+                <StackPanel Orientation="Horizontal"  >
+                    <Image Source="Assets/home.png" Style="{StaticResource IconImageStyle}" />
+                    <TextBlock Text="自宅情報" Foreground="White" VerticalAlignment="Center" />
+                </StackPanel>
             </Button>
         </Grid>
 
         <Grid Grid.Row="1">
-            <Grid.ColumnDefinitions>
+            <!--<Grid.ColumnDefinitions>
                 <ColumnDefinition Width="2*" />
                 <ColumnDefinition Width="1*" />
-            </Grid.ColumnDefinitions>
+            </Grid.ColumnDefinitions>-->
             <Frame Name="MyFrame"></Frame>
+        </Grid>
+
+        <Grid Grid.Row="2">
+            <Button Name="BtnGotoPivot" HorizontalAlignment="center" Width="150" Height="100" Click="BtnGotoPivot_Click">
+                次のスタイルへ
+            </Button>
         </Grid>
         
     </Grid>
