--- a/UWP-Desktop/BaseInfoPage.xaml
+++ b/UWP-Desktop/BaseInfoPage.xaml
@@ -24,9 +24,10 @@
             <RowDefinition Height="*"></RowDefinition>
             <RowDefinition Height="*"></RowDefinition>
             <RowDefinition Height="*"></RowDefinition>
+            <RowDefinition Height="10"></RowDefinition>
         </Grid.RowDefinitions>
 
-        <TextBlock Grid.Column="0" Grid.Row="0"  Margin="10" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="20" >
+        <TextBlock Grid.Column="0" Grid.Row="0"  Margin="10" HorizontalAlignment="Center" VerticalAlignment="Center"  >
             ID番号
         </TextBlock>
 
@@ -34,7 +35,7 @@
             
         </TextBox>
 
-        <TextBlock Grid.Column="0" Grid.Row="1"  Margin="10" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="20" >
+        <TextBlock Grid.Column="0" Grid.Row="1"  Margin="10" HorizontalAlignment="Center" VerticalAlignment="Center"  >
             氏名
         </TextBlock>
 
@@ -42,7 +43,7 @@
 
         </TextBox>
 
-        <TextBlock Grid.Column="0" Grid.Row="2"  Margin="10" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="20" >
+        <TextBlock Grid.Column="0" Grid.Row="2"  Margin="10" HorizontalAlignment="Center" VerticalAlignment="Center"  >
             生年月日
         </TextBlock>
 
@@ -50,16 +51,16 @@
             
         </DatePicker>
 
-        <TextBlock Grid.Column="0" Grid.Row="3"  Margin="10" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="20" >
+        <TextBlock Grid.Column="0" Grid.Row="3"  Margin="10" HorizontalAlignment="Center" VerticalAlignment="Center"  >
             性別
         </TextBlock>
 
-        <StackPanel Orientation="Horizontal" Grid.Column="1" Grid.Row="3">
+        <StackPanel Orientation="Horizontal" Grid.Column="1" Grid.Row="3"  Margin="10" >
             <RadioButton x:Name="Option1RadioButton" Content="男" />
             <RadioButton x:Name="Option2RadioButton" Content="女" />
         </StackPanel>
 
-        <TextBlock Grid.Column="0" Grid.Row="4"  Margin="10" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="20" >
+        <TextBlock Grid.Column="0" Grid.Row="4"  Margin="10" HorizontalAlignment="Center" VerticalAlignment="Center"  >
             戸籍
         </TextBlock>
 
@@ -67,7 +68,7 @@
             
         </ComboBox>-->
 
-        <ComboBox Grid.Column="1" VerticalAlignment="Center" Grid.Row="4"  PlaceholderText="戸籍を選択してください。" Width="300" FontFamily="Segoe UI">
+        <ComboBox Grid.Column="1" VerticalAlignment="Center" Grid.Row="4"  Margin="10"  PlaceholderText="戸籍を選択してください。" Width="300" FontFamily="Segoe UI">
             <x:String>1</x:String>
             <x:String>2</x:String>
             <x:String>3</x:String>
@@ -79,11 +80,11 @@
 
 
 
-        <TextBlock Grid.Column="0" Grid.Row="5"  Margin="10" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="20" FontFamily="Segoe UI" >
+        <TextBlock Grid.Column="0" Grid.Row="5"  Margin="10" HorizontalAlignment="Center" VerticalAlignment="Center"  FontFamily="Segoe UI" >
             学歴
         </TextBlock>
 
-        <StackPanel Orientation="Horizontal" Grid.Column="1" Grid.Row="5">
+        <StackPanel Orientation="Horizontal"  Margin="10" Grid.Column="1" Grid.Row="5">
             <RadioButton x:Name="N1" Content="小学" />
             <RadioButton x:Name="N2" Content="中学" />
             <RadioButton x:Name="N3" Content="高校" />
@@ -92,11 +93,11 @@
             <RadioButton x:Name="N6" Content="その他" />
         </StackPanel>
 
-        <TextBlock Grid.Column="0" Grid.Row="6"  Margin="10" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="20" >
+        <TextBlock Grid.Column="0" Grid.Row="6"  Margin="10" HorizontalAlignment="Center" VerticalAlignment="Center"  >
             家族構成
         </TextBlock>
 
-        <StackPanel Orientation="Horizontal" Grid.Column="1" Grid.Row="6">
+        <StackPanel Orientation="Horizontal" Grid.Column="1" Grid.Row="6" Margin="10" >
             <RadioButton  Content="独身" />
             <RadioButton  Content="結婚子供なし" />
             <RadioButton  Content="結婚子供あり" />
@@ -104,25 +105,25 @@
             <RadioButton  Content="その他" />
         </StackPanel>
 
-        <TextBlock Grid.Column="0" Grid.Row="7"  Margin="10" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="20" >
+        <TextBlock Grid.Column="0" Grid.Row="7"  Margin="10" HorizontalAlignment="Center" VerticalAlignment="Center"  >
             書類送付先
         </TextBlock>
 
-        <StackPanel Orientation="Horizontal" Grid.Column="1" Grid.Row="7">
+        <StackPanel Orientation="Horizontal" Grid.Column="1" Grid.Row="7" Margin="10" >
             <RadioButton  Content="自宅" />
             <RadioButton  Content="勤め先" />
         </StackPanel>
 
-        <TextBlock Grid.Column="0" Grid.Row="8"  Margin="10" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="20" >
+        <TextBlock Grid.Column="0" Grid.Row="8"  Margin="10" HorizontalAlignment="Center" VerticalAlignment="Center"  >
             SMS送付可否
         </TextBlock>
 
-        <StackPanel Orientation="Horizontal" Grid.Column="1" Grid.Row="8">
+        <StackPanel Orientation="Horizontal" Grid.Column="1" Grid.Row="8" Margin="10" >
             <RadioButton  Content="可" />
             <RadioButton  Content="不可" />
         </StackPanel>
 
-        <TextBlock Grid.Column="0" Grid.Row="9"  Margin="10" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="20" >
+        <TextBlock Grid.Column="0" Grid.Row="9"  Margin="10" HorizontalAlignment="Center" VerticalAlignment="Center"  >
             個人E-Mail
         </TextBlock>
         <TextBox Grid.Column="1" Grid.Row="9" Margin="10">
