--- a/UWP-Desktop/EmpInfoPage.xaml
+++ b/UWP-Desktop/EmpInfoPage.xaml
@@ -26,15 +26,16 @@
             <RowDefinition Height="*"></RowDefinition>
             <RowDefinition Height="*"></RowDefinition>
             <RowDefinition Height="*"></RowDefinition>
+            <RowDefinition Height="10"></RowDefinition>
         </Grid.RowDefinitions>
 
-        <TextBlock Grid.Column="0" Grid.Row="0"  Margin="10" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="20" >
+        <TextBlock Grid.Column="0" Grid.Row="0"  Margin="10" HorizontalAlignment="Center" VerticalAlignment="Center"  >
             勤務先名
         </TextBlock>
         <TextBox Grid.Column="1" Grid.Row="0" Margin="10">
         </TextBox>
 
-        <TextBlock Grid.Column="2" Grid.Row="0"  Margin="10" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="20" >
+        <TextBlock Grid.Column="2" Grid.Row="0"  Margin="10" HorizontalAlignment="Center" VerticalAlignment="Center"  >
             入社年月日
         </TextBlock>
         <StackPanel Orientation="Horizontal"  Grid.Column="3" Grid.Row="0"  HorizontalAlignment="Left" VerticalAlignment="Center" Margin="10">
@@ -72,19 +73,19 @@
         </StackPanel>
 
 
-        <TextBlock Grid.Column="0" Grid.Row="1"  Margin="10" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="20" >
+        <TextBlock Grid.Column="0" Grid.Row="1"  Margin="10" HorizontalAlignment="Center" VerticalAlignment="Center"  >
             勤務先部署名
         </TextBlock>
         <TextBox Grid.Column="1" Grid.Row="1" Margin="10">
         </TextBox>
 
-        <TextBlock Grid.Column="0" Grid.Row="2"  Margin="10" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="20" >
+        <TextBlock Grid.Column="0" Grid.Row="2"  Margin="10" HorizontalAlignment="Center" VerticalAlignment="Center"  >
             勤務先役職名
         </TextBlock>
         <TextBox Grid.Column="1" Grid.Row="2" Margin="10">
         </TextBox>
 
-        <TextBlock Grid.Column="0" Grid.Row="3"  Margin="10" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="20" >
+        <TextBlock Grid.Column="0" Grid.Row="3"  Margin="10" HorizontalAlignment="Center" VerticalAlignment="Center"  >
             勤務先住所
         </TextBlock>
         <TextBox Grid.Column="1" Grid.Row="3" Grid.ColumnSpan="3" Margin="10">
@@ -92,7 +93,7 @@
 
 
 
-        <TextBlock Grid.Column="0" Grid.Row="4"  Margin="10" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="20" >
+        <TextBlock Grid.Column="0" Grid.Row="4"  Margin="10" HorizontalAlignment="Center" VerticalAlignment="Center"  >
             勤務時間
         </TextBlock>
 
