--- a/UWP-Desktop/StartupPage.xaml
+++ b/UWP-Desktop/StartupPage.xaml
@@ -26,11 +26,12 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="100" />
             <RowDefinition Height="*" />
-            <RowDefinition Height="100" />
+            <RowDefinition Height="0" />
         </Grid.RowDefinitions>
         
         <Grid>
             <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*" />
                 <ColumnDefinition Width="*" />
                 <ColumnDefinition Width="*" />
                 <ColumnDefinition Width="*" />
@@ -62,6 +63,17 @@
                     <TextBlock Text="自宅情報" Foreground="White" VerticalAlignment="Center" />
                 </StackPanel>
             </Button>
+
+            <Button Name="BtnGotoPivot" 
+                    HorizontalAlignment="center" 
+                    Grid.Column="3"
+                    Width="150" 
+                    Height="100" 
+                    Click="BtnGotoPivot_Click">
+                次のスタイルへ
+            </Button>
+
+
         </Grid>
 
         <Grid Grid.Row="1">
@@ -72,11 +84,11 @@
             <Frame Name="MyFrame"></Frame>
         </Grid>
 
-        <Grid Grid.Row="2">
+        <!--<Grid Grid.Row="2">
             <Button Name="BtnGotoPivot" HorizontalAlignment="center" Width="150" Height="100" Click="BtnGotoPivot_Click">
                 次のスタイルへ
             </Button>
-        </Grid>
+        </Grid>-->
         
     </Grid>
 </Page>
