--- a/UWP-Desktop/StartupPage.xaml
+++ b/UWP-Desktop/StartupPage.xaml
@@ -5,6 +5,8 @@
     xmlns:local="using:UWP_Desktop"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:Interactivity="using:Microsoft.Xaml.Interactivity" 
+    xmlns:Core="using:Microsoft.Xaml.Interactions.Core" 
     mc:Ignorable="d">
 
     <Page.Resources>
